非公式ー＞公認

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-minimal
-title: にゅうワールド非公式Wiki
-description: "にゅうワールド(英(暫定): Nyuw World)の非公式wikiです。"
+title: にゅうワールド情報Wiki
+description: "にゅうワールド(英(暫定): Nyuw World)のwikiです。Hamanoさんから承諾を得ています。"
 lang: ja-JP
 permalink: /articles/:year/:month/:day/:title:output_ext
